@@ -3,27 +3,6 @@ Microsoft Developer Studio Workspace File, Format Version 6.00
 
 ###############################################################################
 
-Project: "tilp2"=.\tilp2.dsp - Package Owner=<4>
-
-Package=<5>
-{{{
-}}}
-
-Package=<4>
-{{{
-    Begin Project Dependency
-    Project_Dep_Name ticables2
-    End Project Dependency
-    Begin Project Dependency
-    Project_Dep_Name ticalcs2
-    End Project Dependency
-    Begin Project Dependency
-    Project_Dep_Name tifiles2
-    End Project Dependency
-}}}
-
-###############################################################################
-
 Project: "ticables2"=..\..\..\ticables2\build\msvc\ticables2.dsp - Package Owner=<4>
 
 Package=<5>
@@ -54,6 +33,18 @@ Package=<4>
 
 ###############################################################################
 
+Project: "ticonv"=..\..\..\ticonv\build\msvc\ticonv.dsp - Package Owner=<4>
+
+Package=<5>
+{{{
+}}}
+
+Package=<4>
+{{{
+}}}
+
+###############################################################################
+
 Project: "tifiles2"=..\..\..\tifiles2\build\msvc\tifiles2.dsp - Package Owner=<4>
 
 Package=<5>
@@ -62,6 +53,30 @@ Package=<5>
 
 Package=<4>
 {{{
+    Begin Project Dependency
+    Project_Dep_Name ticonv
+    End Project Dependency
+}}}
+
+###############################################################################
+
+Project: "tilp2"=.\tilp2.dsp - Package Owner=<4>
+
+Package=<5>
+{{{
+}}}
+
+Package=<4>
+{{{
+    Begin Project Dependency
+    Project_Dep_Name ticables2
+    End Project Dependency
+    Begin Project Dependency
+    Project_Dep_Name ticalcs2
+    End Project Dependency
+    Begin Project Dependency
+    Project_Dep_Name tifiles2
+    End Project Dependency
 }}}
 
 ###############################################################################
@@ -83,6 +98,9 @@ Package=<4>
     Begin Project Dependency
     Project_Dep_Name tifiles2
     End Project Dependency
+    Begin Project Dependency
+    Project_Dep_Name ticonv
+    End Project Dependency
 }}}
 
 ###############################################################################
@@ -103,6 +121,9 @@ Package=<4>
     End Project Dependency
     Begin Project Dependency
     Project_Dep_Name tifiles2
+    End Project Dependency
+    Begin Project Dependency
+    Project_Dep_Name ticonv
     End Project Dependency
 }}}
 
