@@ -198,7 +198,7 @@ void tilp_slct_load_contents(void)
 			}
 			fe->selected = (int *)calloc(c->num_entries + 1, sizeof(int));
 		}
-		else if(tifiles_file_is_tig(fe->name))
+		else if(tifiles_file_is_tigroup(fe->name))
 		{
 			fe->content = c = tifiles_content_create_regular(calc_handle->model);
 			err = tifiles_file_read_tigroup(fe->name, fe->content);
